--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			</h3>
 
 			<p class="txt-center l1-txt2 p-b-60">
-				Ba Soufiane Rah Our website is under construction !
+				Our website is under construction !
 			</p>
 
 		
