--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
 			<p class="txt-center l1-txt2 p-b-60">
 				Our website is under construction !
+			<br>
+				Contact us On Whatsapp : +212664474676
 			</p>
 
 		
