--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ gtag('config', 'G-08TJ3HH1K6');
             </svg>
             <h1>Welcome</h1>
             <p class="coming-soon">Coming Soon</p>
-            <p class="contact-info">Contact us at: <a href="mailto:dncontactor@gmail.com">contact@traiteur.ma</a> or <a href="tel:+212664474676">+212 664 474 676</a></p>
+            <p class="contact-info">Contact us at: <a href="mailto:dncontactor@gmail.com">dncontactor@gmail.com</a> or <a href="tel:+212664474676">+212 664 474 676</a></p>
         </div>
     </div>
 </body>
