--- a/DEVIS/index.html
+++ b/DEVIS/index.html
@@ -105,7 +105,7 @@ gtag('config', 'G-08TJ3HH1K6');
                     d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm-.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z" />
             </svg>
             <h1>Welcome to Devis.ma</h1>
-            <p class="coming-soon">Coming Soon</p>
+            <p class="coming-soon">Coming Soon Project</p>
             <p class="contact-info">Contact us at: <a href="mailto:dncontactor@gmail.com">dncontactor@gmail.com</a> <br> or <br> <a href="WhatsApp:+212664474676">WhatsApp Only: +212 664 474 676</a></p>
         </div>
     </div>
